finals configs
