# src/routes/auth.route.js
@@ -1,6 +1,6 @@
 const router = require('express').Router();
 const authController = require('../controllers/auth.controller');
 
-router.post('auth//login', authController.loginController);
+router.post('auth/login', authController.loginController);
 
 module.exports = router;
